--- a/about.html
+++ b/about.html
@@ -15,14 +15,16 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>天下事有难易乎？<br>
+    为之，则难者亦易矣<br>
+    不为，则难者亦难矣
+    </p></blockquote>
 
     <p>Hey，我是<strong>myc</strong>，一个游戏开发者，擅长lua脚本语言。</p>
 
     <p>平常喜欢游戏，美食，电影</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/cooee">👉GitHub·BY</a> 如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/cooee">👉GitHub·Cooee</a> 如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
@@ -31,7 +33,6 @@ header-img: "img/post-bg-rwd.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
